# webauthn-the-hard-way

./: .gitignore  .markdownlint-cli2.jsonc  LICENSE  README.ja.md  README.md  pyproject.toml  run.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
client/: authenticate.js  index.html  register.js
server/: app.py  cbor.py  cose.py  parsers.py  verify.py
server/attestation/: __init__.py  fido_u2f.py  none.py  packed.py
tests/: cbor_encoder.py  test_cbor.py  test_cose.py  test_e2e.py  test_fido_u2f.py
