[project]
name = "webauthn-the-hard-way"
version = "0.1.0"
description = "Build a WebAuthn Relying Party from scratch."
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = [".venv", "venv"]

[tool.ruff.lint]
# Conservative ruleset for a small educational repo: pyflakes (F), pycodestyle
# (E/W), pyupgrade (UP), bugbear (B), isort (I). No opinionated "fix everything"
# rules; the code should look hand-written.
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line length is enforced via ruff format width, not the linter
    "B008",  # default-arg-function-call -- fine for Flask handlers / dataclasses
]
